# kubelens-mcp

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  agent_bridge_llama_cpp.py  docs_k8s_openapi.md  docs_kube.md
src/: main.rs
src/cluster/: kube_client.rs  mock_client.rs  mod.rs  traits.rs
src/mcp/: mod.rs  protocol.rs  types.rs
src/tools/: diagnostics.rs  ingress.rs  metrics.rs  mod.rs
